# Dental_Agent

./: .cursorrules  .env.baseline.example  .env.example  .env.local.template  .gitignore  .mcp.json  CLAUDE.md  README.md  package-lock.json  package.json  progress.txt
.claude/: ARCHITECTURE_DIAGRAM.md  AUTO-FIX-PROMPT.md  CLAUDE_INFRASTRUCTURE_SETUP.md  COMPOUND_PLUGIN_TESTING.md  COMPOUND_QUICK_START.md  COMPOUND_WORKFLOWS.md  CONTEXT_ENGINEERING_INTEGRATION.md  DEAL_CARD_COMPLETE.md  DEAL_CARD_OPTIMIZATION_REPORT.md  HOOKS_QUICK_REFERENCE.md  INSTALLATION_COMPLETE.md  INSTALLATION_SUMMARY.md  INSTALLATION_VERIFICATION.md  INTEGRATION_SUMMARY.md  INTEGRATION_TEST.md  MAGICAL_10X_COMPLETE.md  MAGICAL_10X_SETUP.md  QA_IMPLEMENTATION_ROADMAP.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SELLERFI_AGENT_CONFIG.md  SELLERFI_DEAL_CARD_AGENTS.md  SLASH_COMMANDS_IMPLEMENTATION.md  TODO-REVIEW-REPORT.md  auto-fix-everything.sh  clean-unnecessary-todos.sh  config.json  install-slash-commands.sh  quick-fix.sh  settings.json  test-hooks.sh
.taskmaster/: config.json  state.json
apps/api/: env.example  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py  graph.py
apps/api/app/core/: config.py
apps/api/app/routers/: auth.py  chat.py  huddle.py  schedule.py
apps/local-agent/: pyproject.toml
apps/local-agent/src/: __init__.py  config.py  main.py
apps/local-agent/src/extractors/: __init__.py
apps/local-agent/src/sanitizers/: __init__.py
apps/local-agent/src/uploader/: __init__.py
apps/local-agent/tests/: __init__.py
docs/: APP_FLOW.md  BACKEND_STRUCTURE.md  DEPLOYMENT_CHECKLIST.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  PILOT_PLAYBOOK.md  PRD.md  TECH_STACK.md  TESTING_STRATEGY.md
scripts/: add-pgvector-column.sql  add-pgvector-column.ts  add-photos-to-specific-listings.ts  analyze-bundle.ts  audit-csp-compliance.ts  backfill-notification-preferences.ts  backup-database.ts  bootstrap-ai-tooling.sh  bump-version.js  check-audit-logs.sql  check-package-lock.mjs  check-vercel-db.sh  clean-git-history.sh  cron-monitoring.js  deploy-staging.sh  fix-package-lock.mjs  fix-production-migration.sql  fix-stuck-dealroom-statuses.ts  generate-icons.mjs  install-git-hooks.sh  pre-test-qa-checklist.sh  promote-to-seller.ts  rag-ingest.ts  rag-redaction-gate.ts  run-worker.ts  seed-comprehensive.ts  seed-document-templates.ts  seed-knowledge-base.ts  seed-listing-photos.ts  seed-managed-sale-demo.ts  seed-production-db.ts  seed-production-photos.ts  seed-sample-listings.ts  seed-test-accounts.ts  seed-test-billing.ts  seed-verified-revenue-test.ts  set-version-env.js  setup-stripe-products.ts  setup-webhook.sh  stripe-sync-products.ts  (+8 more)
(+90 files in other folders)
